--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@react-native-community/cli": "^13.6.4",
     "expo": "~50.0.14",
+    "expo-keep-awake": "~12.8.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-eject": "^0.2.0",
-    "react-native-paper": "^5.12.3"
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-paper": "^5.12.3",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
